cluster/frontend/service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: frontend
  name: frontend
  labels:
    app: frontend
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
    # protocol: TCP
  selector:
    app: frontend
    # internalTrafficPolicy: Cluster
    # ipFamilies:
    # - IPv4
    # ipFamilyPolicy: SingleStack
    # sessionAffinity: None
    # type: LoadBalancer
# status:
#   loadBalancer: {}
