cluster/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: frontend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.dreampuppy.com.br
    secretName: letsencrypt-nginx
  rules:
  - host: www.dreampuppy.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
